# leadlab-starter-exemple-1

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: database.py
backend/app/db/: base.py  session.py
